--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 - course: BSc Computer Science
-  institute: University of Birmingham
-  dates: 2018 - 2021
+  institute: North Carolina State University
+  dates: August 2019 - May 2023
   logo: uob.png
   
 - course: Explorer Fellow
