--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 - course: BSc Computer Science
   institute: North Carolina State University
   dates: August 2019 - May 2023
-  logo: uob.png
+  logo: ncstateseal.png
   
 - course: Explorer Fellow
   institute: MLH Fellowship
