--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,8 +1,15 @@
 - title: WeatherApp
   date: Summer 2020
+  page-name: weatherapp
 
 - title: ProjectViewer
   date: Winter 2020 - Present
+  page-name: projectviewer
 
 - title: YouTubeDownloader
   date: Winter 2020
+  page-name: youtubedownloader
+
+-title: Movie Data Analysis
+ date: Winter 2020
+ page-name: moviedataanalysis
