--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 - course: BSc Computer Science
   institute: North Carolina State University
-  dates: August 2019 - May 2023
+  dates: August 2019 - May 2023 (Expected)
   logo: ncstateseal.png
 
