--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,6 +10,6 @@
   date: Winter 2020
   page-name: youtubedownloader
 
-- title: Movie Data Analysis
-  date: Winter 2020
-  page-name: moviedataanalysis
+- title: Stock Tracker Full Stack Project
+  date: Spring 2021
+  page-name: stocktrackerfullstack
