--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,11 @@
+ - role: Software Engineer Program Intern
+   company: JPMorgan Chase & Co.
+   dates: June 2022 - August 2022
+   logo: jpmorganlogo.jpeg
+
 - role: IT Manufacturing Solutions Intern
   company: Cree | Wolfspeed
-  dates: Summer 2021
+  dates: May 2021 - August 2021
   logo: creelogo.png
+ 
+
