--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -9,3 +9,11 @@
 - title: Stock Tracker Full Stack Project
   date: Spring 2021
   page-name: stocktrackerfullstack
+  
+- title: java Web Crawler
+  date: Spring 2022
+  page-name: javawebcrawler
+  
+- title: Python Neural Network - CSC422 Term Project
+  date: Fall 2022
+  page-name: neuralnetworkpython
